# flutter-tree-sitter

./: .gitignore  .pubignore  Makefile  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: release.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  pubspec.yaml
example/lib/: main.dart
ios/: flutter_tree_sitter.podspec  tree_sitter.podspec
ios/Classes/: tree_sitter.c
lib/: bindings.g.dart  flutter_tree_sitter.dart  highlight.dart  lib.dart  tree_sitter.dart
lib/src/: bindings.g.dart  highlight.dart  language.dart  lib.dart  node.dart  parser.dart  query.dart  tree.dart  utils.dart
linux/: CMakeLists.txt
macos/: flutter_tree_sitter.podspec  tree_sitter.podspec
macos/Classes/: tree_sitter.c
src/: CMakeLists.txt  flutter_tree_sitter.c  tree_sitter.c
src/tree-sitter/: parser.c  query.c
windows/: CMakeLists.txt
